--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
     "name": "weight-converter",
     "version": "1.0.0",
-    "description": "",
     "main": "main.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "deploy": "gh-pages -d Weight-Converter"
     },
     "repository": {
         "type": "git",
@@ -19,5 +18,7 @@
     "homepage": "https://github.com/Sielik/Weight-Converter#readme",
     "dependencies": {
         "gh-pages": "^3.0.0"
-    }
+    },
+    "devDependencies": {},
+    "description": ""
 }
